--- a/login.html
+++ b/login.html
@@ -18,10 +18,10 @@
             </div>
             <div >
                 <ul class="home">
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Contact</li>
-                    <li>Login</li>
+                    <li><a href="./login.html">Home</a></li>
+                    <li><a>About</a></li>
+                    <li><a>Contact</a></li>
+                    <li><a href="./login.html">Login</a></li>
                 </ul>
             </div>
         </div>
